Update bulk_discounts index page tests to include within block; Update bulk_discounts index view to include link to create new discount

--- a/app/views/bulk_discounts/index.html.erb
+++ b/app/views/bulk_discounts/index.html.erb
@@ -6,3 +6,7 @@
     <p>Quantity Threshold: <%= bd.quantity_threshold %></p>
   <% end %>
 </div>
+
+<div id="new_discount">
+  <%= link_to 'Create a New Discount', new_merchant_bulk_discount_path(@merchant) %>
+</div>
