--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -21,6 +21,8 @@
 
   <p> Created on: <%= @invoice.created_at.strftime("%A, %B %-d, %Y") %></p>
   <p>Total Revenue: <%= @invoice.total_revenue %></p>
+  <p>Total Discount: <%= @invoice.total_discount %></p>
+  <p>Total Revenue After Discount: <%= @invoice.revenue_after_discount %></p>
 
 
   <h4>Customer:</h4>
