Create HolidayService API call; Update bulk_discounts index show page; Complete US9

--- a/app/views/bulk_discounts/index.html.erb
+++ b/app/views/bulk_discounts/index.html.erb
@@ -15,7 +15,7 @@
 
 <div id="holidays">
   <h2>Upcoming Holidays</h2>
-  <p><%= @holiday_names[0] %> | <%= holiday_dates[0] %></p>
-  <p><%= @holiday_names[1] %> | <%= holiday_dates[1] %></p>
-  <p><%= @holiday_names[2] %> | <%= holiday_dates[2] %></p>
+  <p><%= @holiday_names[0] %> | <%= @holiday_dates[0] %></p>
+  <p><%= @holiday_names[1] %> | <%= @holiday_dates[1] %></p>
+  <p><%= @holiday_names[2] %> | <%= @holiday_dates[2] %></p>
 </div>
